--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,67 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "SAM Build",
-            "type": "shell",
-            "command": "sam",
-            "args": ["build"],
-            "group": "build",
-            "options": {
-                "cwd": "${workspaceFolder}/backend"
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared"
-            }
-        },
-        {
-            "label": "SAM Local Start API",
-            "type": "shell",
-            "command": "sam",
-            "args": [
-                "local",
-                "start-api",
-                "--template-file",
-                "template.yaml",
-                "--env-vars",
-                "env.json",
-                "--port",
-                "5000",
-                "--host",
-                "0.0.0.0"
-            ],
-            "group": "test",
-            "options": {
-                "cwd": "${workspaceFolder}/backend"
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared"
-            },
-            "dependsOn": "SAM Build"
-        },
-        {
-            "label": "Start DynamoDB Local",
-            "type": "shell",
-            "command": "docker",
-            "args": [
-                "run",
-                "-p",
-                "8000:8000",
-                "--name",
-                "dynamodb-local-sam",
-                "amazon/dynamodb-local"
-            ],
-            "group": "test",
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared"
+            "type": "npm",
+            "script": "start",
+            "path": "frontend/",
+            "label": "npm: start - frontend",
+            "isBackground": true,
+            "problemMatcher": {
+                "owner": "webpack",
+                "pattern": {
+                    "regexp": "ERROR in (.*)",
+                    "file": 1
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "webpack: Compiling...",
+                    "endsPattern": "webpack: Compiled successfully."
+                }
             }
         }
     ]
